# static-dependency-injector

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: example_static_di.py
examples/example_services/: counter.py  http_client_service.py  logger_service.py  user_provider_service.py
src/static_dependency_injector/: _pytest_plugin.py  testing.py
src/static_dependency_injector/containers/: __init__.py  _container_config_dict.py  _static_declarative_container.py  _static_declarative_container_meta.py
src/static_dependency_injector/static_providers/: __init__.py  _container_providers.py  _scoped_containers.py
tests/: conftest.py  test_context_reset.py  test_plugin_autoreset.py  test_static_container.py  test_static_providers.py
tests/compat/: test_di_api_compat.py
tests/container/: test_annotation_warning.py  test_inheritance.py  test_override.py  test_provider_getter.py  test_registration.py  test_scoped_containers.py
tests/integration/: test_di_integration.py
tests/parity/: test_parity.py
tests/providers/: test_delegate.py  test_lifecycle.py  test_on_set.py  test_resolution.py
tests/testing/: test_test_context.py
tests/testscope/: test_plugin.py  test_reset.py
tests/typing/: conftest.py  test_typing.py
tests/typing/cases/: assignment_override.py  copy_rewire.py  delegate.py  inherited_container.py  nested_container.py  override_errors.py  overrides_and_reset.py  provider_wiring.py  provider_wiring_typo.py  read_value_types.py  read_wrong_type.py  scoped_container.py  subclass_override.py  testcontext.py  user_api.py
tests/wiring/: test_wiring.py
