[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[project]
name = "static-dependency-injector"
version = "0.3.3"
description = "Static, lazily-resolved declarative DI containers built on dependency-injector."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Viacheslav Dermichev" }]
keywords = [
    "dependency-injection",
    "di",
    "ioc",
    "container",
    "static",
    "dependency-injector",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Framework :: Pytest",
]
dependencies = [
    "dependency-injector>=4.49.1",
    "typing-extensions>=4.12",
]

[project.urls]
Homepage = "https://github.com/v-dermichev/static-dependency-injector"
Repository = "https://github.com/v-dermichev/static-dependency-injector"
Issues = "https://github.com/v-dermichev/static-dependency-injector/issues"

# Auto-registered pytest plugin: resets TestContextSingleton providers per test.
[project.entry-points.pytest11]
static_dependency_injector = "static_dependency_injector._pytest_plugin"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ty>=0.0.1a1",
    "mypy>=1.13",
    "pyright>=1.1.390",
]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.rules]
all = "error"

[tool.ruff]
line-length = 120
# Typing case files intentionally contain type errors; exclude from lint gate.
exclude = [".*", "__pycache__", "tests/typing/cases"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]

[tool.ruff.lint.per-file-ignores]
# Provider factories are intentionally capitalised (Singleton, Object, ...).
"*/static_providers/_container_providers.py" = ["N802"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
    "typing: type-checker behavior tests (run ty / mypy / pyright on case files)",
]

# Typing case files intentionally contain type errors; exclude from the ty gate.
[tool.ty.src]
exclude = ["tests/typing/cases"]
